--- a/index.html
+++ b/index.html
@@ -34,57 +34,58 @@ https://templatemo.com/tm-575-leadership-event
     <body>
 
         <nav class="navbar navbar-expand-lg">
-            <div class="container">
+    <div class="container">
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+            <i class="bi-bullseye brand-logo"></i>
+            <span class="brand-text">CREATOR <br> TECH</span>
+        </a>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                    <i class="bi-bullseye brand-logo"></i>
-                    <span class="brand-text">Leadership <br> Event</span>
-                </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <a class="nav-link custom-btn btn d-lg-none" href="#">Buy Tickets</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_1">Home</a>
-                        </li>
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="#home">Home</a>
+                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">About</a>
-                        </li>
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="#factories">Factories</a>
+                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Speakers</a>
-                        </li>
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="#processes">Processes</a>
+                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Schedules</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">Pricing</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_6">Venue</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_7">Contact</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link custom-btn btn d-none d-lg-block" href="#">Buy Tickets</a>
-                        </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#products" id="navbarDropdown"
+                       role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Products
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#product1">Product 1</a></li>
+                        <li><a class="dropdown-item" href="#product2">Product 2</a></li>
                     </ul>
-                <div>
-                        
-            </div>
-        </nav>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="#news">News</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link click-scroll" href="#contact">Contact Us</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
         <main>
 
