--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ https://templatemo.com/tm-575-leadership-event
     <div class="container">
 
         <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-            <i class="bi-bullseye brand-logo"></i>
-            <span class="brand-text">CREATOR <br> TECH</span>
+            <img src="images/LOGO1.png" alt="CREATOR TECH" style="height: 50px;">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -849,9 +848,9 @@ https://templatemo.com/tm-575-leadership-event
                     <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
                         <div class="d-flex">
                             <a href="index.html" class="navbar-brand">
-                                <i class="bi-bullseye brand-logo"></i>
-                                <span class="brand-text">Leadership <br> Event</span>
+                                <img src="images/logo.png" alt="CREATOR TECH" style="height: 40px;">
                             </a>
+
 
                             <ul class="social-icon ms-auto">
                                 <li><a href="#" class="social-icon-link bi-facebook"></a></li>
