--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@ https://templatemo.com/tm-575-leadership-event
         <nav class="navbar navbar-expand-lg">
     <div class="container">
 
-        <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-            <img src="images/LOGO2.png" alt="CREATOR TECH" style="height: 50px;">
+        <a href="index.html" class="navbar-brand mx-auto mx-lg-0 d-flex align-items-center">
+            <img src="images/LOGO2.png" alt="Company Logo" style="height: 40px; margin-right: 10px;">
+            <span class="brand-text">CREATOR <br> TECH</span>
         </a>
+
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -847,9 +849,11 @@ https://templatemo.com/tm-575-leadership-event
 
                     <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
                         <div class="d-flex">
-                            <a href="index.html" class="navbar-brand">
-                                <img src="images/LOGO2.png" alt="CREATOR TECH" style="height: 40px;">
+                            <a href="index.html" class="navbar-brand d-flex align-items-center">
+                                <img src="images/LOGO2.png" alt="Company Logo" style="height: 35px; margin-right: 10px;">
+                                <span class="brand-text">CREATOR <br> TECH</span>
                             </a>
+
 
 
                             <ul class="social-icon ms-auto">
