--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-575-leadership-event
 
         <a href="index.html" class="navbar-brand mx-auto mx-lg-0 d-flex align-items-center">
             <img src="images/LOGO2.png" alt="Company Logo" style="height: 40px; margin-right: 10px;">
-            <span class="brand-text">CREATOR <br> TECH</span>
+            <span class="brand-text">CREATOR TECH</span>
         </a>
 
 
