--- a/index.html
+++ b/index.html
@@ -850,8 +850,8 @@ https://templatemo.com/tm-575-leadership-event
                     <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
                         <div class="d-flex">
                             <a href="index.html" class="navbar-brand d-flex align-items-center">
-                                <img src="images/LOGO3.png" alt="Company Logo" style="height: 35px; margin-right: 10px;">
-                                <span class="brand-text">CREATOR <br> TECH</span>
+                                <img src="images/LOGO4.png" alt="Company Logo" style="height: 35px; margin-right: 10px;">
+                                <span class="brand-text">CREATOR TECH</span>
                             </a>
 
 
