--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@ https://templatemo.com/tm-575-leadership-event
                         <div class="col-lg-5 col-12 m-auto">
                             <div class="hero-text">
 
-                                <h1 class="text-white mb-4"><u class="text-info">Leadership</u> Conference 2022</h1>
-
+                                <h1 class="text-white mb-4"><u class="text-info">CREATOR TECH</u> Official Website</h1>
                                 <div class="d-flex justify-content-center align-items-center">
-                                    <span class="date-text">July 12 to 18, 2022</span>
+                                    <span class="date-text">Innovating for Industry</span>
 
-                                    <span class="location-text">Times Square, NY</span>
+                                    <span class="location-text">Shenyang, China</span>
                                 </div>
+
 
                                 <a href="#section_2" class="custom-link bi-arrow-down arrow-icon"></a>
                             </div>
