--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@ https://templatemo.com/tm-575-leadership-event
                                 <div class="highlight-info">
                                     <h3 class="highlight-title">2019 Highlights</h3>
 
-                                    <a href="https://www.youtube.com/templatemo" class="bi-youtube highlight-icon"></a>
+                                    <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
+
                                 </div>
                             </div>
                         </div>
@@ -144,7 +145,8 @@ https://templatemo.com/tm-575-leadership-event
                                 <div class="highlight-info">
                                     <h3 class="highlight-title">2020 Highlights</h3>
 
-                                    <a href="https://www.youtube.com/templatemo" class="bi-youtube highlight-icon"></a>
+                                    <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
+
                                 </div>
                             </div>
                         </div>
@@ -156,7 +158,8 @@ https://templatemo.com/tm-575-leadership-event
                                 <div class="highlight-info">
                                     <h3 class="highlight-title">2021 Highlights</h3>
 
-                                    <a href="https://www.youtube.com/templatemo" class="bi-youtube highlight-icon"></a>
+                                    <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
+
                                 </div>
                             </div>
                         </div>
