--- a/index.html
+++ b/index.html
@@ -127,39 +127,32 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="highlight-thumb">
-                                <img src="images/highlight/alexandre-pellaes-6vAjp0pscX0-unsplash.jpg" class="highlight-image img-fluid" alt="">
-
+                                <img src="images/highlight/casting.jpg" class="highlight-image img-fluid" alt="Casting">
                                 <div class="highlight-info">
-                                    <h3 class="highlight-title">2019 Highlights</h3>
-
+                                    <h3 class="highlight-title">Casting</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
-
                                 </div>
                             </div>
                         </div>
 
+                        
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="highlight-thumb">
-                                <img src="images/highlight/miguel-henriques--8atMWER8bI-unsplash.jpg" class="highlight-image img-fluid" alt="">
-
+                                <img src="images/highlight/welding.jpg" class="highlight-image img-fluid" alt="Welding">
                                 <div class="highlight-info">
-                                    <h3 class="highlight-title">2020 Highlights</h3>
-
+                                    <h3 class="highlight-title">Welding</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
-
                                 </div>
                             </div>
                         </div>
+                        
 
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="highlight-thumb">
-                                <img src="images/highlight/jakob-dalbjorn-cuKJre3nyYc-unsplash.jpg" class="highlight-image img-fluid" alt="">
-
+                                <img src="images/highlight/machining.jpg" class="highlight-image img-fluid" alt="Machining">
                                 <div class="highlight-info">
-                                    <h3 class="highlight-title">2021 Highlights</h3>
-
+                                    <h3 class="highlight-title">Machining</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
-
                                 </div>
                             </div>
                         </div>
