--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="highlight-thumb">
-                                <img src="images/highlight/casting.jpg" class="highlight-image img-fluid" alt="Casting">
+                                <img src="images/highlight/casting.png" class="highlight-image img-fluid" alt="Casting">
                                 <div class="highlight-info">
                                     <h3 class="highlight-title">Casting</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
@@ -138,7 +138,7 @@ https://templatemo.com/tm-575-leadership-event
                         
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="highlight-thumb">
-                                <img src="images/highlight/welding.jpg" class="highlight-image img-fluid" alt="Welding">
+                                <img src="images/highlight/welding.png" class="highlight-image img-fluid" alt="Welding">
                                 <div class="highlight-info">
                                     <h3 class="highlight-title">Welding</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
@@ -149,7 +149,7 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="highlight-thumb">
-                                <img src="images/highlight/machining.jpg" class="highlight-image img-fluid" alt="Machining">
+                                <img src="images/highlight/machining.png" class="highlight-image img-fluid" alt="Machining">
                                 <div class="highlight-info">
                                     <h3 class="highlight-title">Machining</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
