--- a/index.html
+++ b/index.html
@@ -162,43 +162,29 @@ https://templatemo.com/tm-575-leadership-event
             </section>
 
 
-            <section class="about section-padding" id="section_2">
-                <div class="container">
-                    <div class="row">
+           <section class="about-section section-padding" id="factories">
+              <div class="container">
+                <div class="row align-items-center">
 
-                        <div class="col-lg-10 col-12">
-                            <h2 class="mb-4">Our <u class="text-info">Story</u></h2>
-                        </div>
+                  <div class="col-lg-7 col-12 mb-4 mb-lg-0">
+                    <h2 class="text-black mb-3">About Our Capabilities</h2>
 
-                        <div class="col-lg-6 col-12">
-                            <h3 class="mb-3">The importance of Leadership Conference in 2022</h3>
+                    <p>Empowering industry with smart solutions in casting, forging, machining and more.</p>
+                    <p>We specialize in technical support and one-stop trade services for industrial clients worldwide.</p>
 
-                            <p>Leadership Event is one-page Bootstrap v5.1.3 CSS layout for your website. Thank you for choosing TemplateMo website where you can instantly download free CSS templates at no cost.</p>
+                    <a href="factories.html" class="btn custom-btn custom-border-btn btn-lg mt-3 me-3" target="_blank">
+                      Learn More
+                    </a>
+                  </div>
 
-                            <a class="custom-btn custom-border-btn btn custom-link mt-3 me-3" href="#section_3">Meet Speakers</a>
+                  <div class="col-lg-5 col-12">
+                    <img src="images/factories-overview.jpg" class="img-fluid rounded shadow" alt="Factory Overview">
+                  </div>
 
-                            <a class="custom-btn btn custom-link mt-3" href="#section_4">Check out Schedule</a>
-                        </div>
-
-                        <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut dolore</h4>
-
-                            <div class="avatar-group border-top py-5 mt-5">
-                                <img src="images/avatar/portrait-good-looking-brunette-young-asian-woman.jpg" class="img-fluid avatar-image" alt="">
-
-                                <img src="images/avatar/happy-asian-man-standing-with-arms-crossed-grey-wall.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
-
-                                <img src="images/avatar/senior-man-white-sweater-eyeglasses.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
-
-                                <img src="images/avatar/pretty-smiling-joyfully-female-with-fair-hair-dressed-casually-looking-with-satisfaction.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
-
-                                <p class="d-inline">120+ People are attending with us</p>
-                            </div>
-                        </div>
-
-                    </div>
                 </div>
+              </div>
             </section>
+
 
 
             <section class="speakers section-padding" id="section_3">
