--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ https://templatemo.com/tm-575-leadership-event
                   </div>
 
                   <div class="col-lg-5 col-12">
-                    <img src="images/factories-overview.jpg" class="img-fluid rounded shadow" alt="Factory Overview">
+                    <img src="images/factories-overview.png" class="img-fluid rounded shadow" alt="Factory Overview">
                   </div>
 
                 </div>
