--- a/factories.html
+++ b/factories.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>Factory Capabilities - CREATOR TECH</title>
+
+  <!-- 样式引用 -->
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/custom.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
+
 <body>
 
-  <!-- Header -->
-  <header class="site-header">
+  <!-- 顶部导航栏 -->
+  <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <h1>Factory Capabilities</h1>
-      <p class="lead">Comprehensive manufacturing solutions for global industries</p>
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" class="logo img-fluid" alt="Logo" />
+        <span class="brand-text">CREATOR TECH</span>
+      </a>
     </div>
-  </header>
+  </nav>
 
-  <!-- Main Content -->
-  <main class="section-padding">
+  <!-- 主体内容 -->
+  <section class="about-section section-padding" id="factories-content">
     <div class="container">
-      <section class="about-text bg-white p-4 rounded shadow-sm">
-        <h2>Our Manufacturing Capabilities</h2>
+      <div class="row justify-content-center">
 
-        <p>Shenyang Chuanyuan Weihua Technology Co., Ltd. is equipped with comprehensive manufacturing capabilities including casting, forging, welding, machining, and crushing equipment integration. We are committed to delivering high-quality industrial components and complete solutions for various sectors.</p>
+        <div class="col-lg-10 col-12">
+          <div class="section-title-wrap mb-5">
+            <h2 class="section-title text-center">Our Manufacturing Capabilities</h2>
+          </div>
 
-        <h4>Casting</h4>
-        <p>Established in 2002, with two 3-ton melting furnaces and a 20-ton heat treatment furnace. Annual capacity of 15,000 tons. Produces gray and ductile iron castings from 5kg to 8 tons, equipped with spectrometers and tensile testers to ensure consistent quality.</p>
+          <div class="about-text bg-white p-4 rounded shadow-sm">
+            <p>Shenyang Chuanyuan Weihua Technology Co., Ltd. is equipped with comprehensive manufacturing capabilities including casting, forging, welding, machining, and crushing equipment integration. We are committed to delivering high-quality industrial components and complete solutions for various sectors.</p>
 
-        <h4>Forging</h4>
-        <p>Founded in 2001, equipped with a 2000-ton free forging hydraulic press, 4-ton electro-hydraulic hammer, and ring rolling machines. Annual output: 30,000 tons. Main products include gear shafts, ladle trunnions, converter gear rings, and components for wind power and metallurgical industries.</p>
+            <h5>Casting</h5>
+            <p>Established in 2002, with two 3-ton melting furnaces and a 20-ton heat treatment furnace. Annual capacity of 15,000 tons. Produces gray and ductile iron castings from 5kg to 8 tons, equipped with spectrometers and tensile testers to ensure consistent quality.</p>
 
-        <h4>Welding</h4>
-        <p>Established in 1992, covering 25,000 m² with a lifting capacity of up to 50 tons. Equipped with 4000W fiber laser cutters, flame cutting machines, arc welding robots, 1600T CNC press brakes, and straightening machines. Maximum product dimensions: 15,000×6,000×600 mm.</p>
+            <h5>Forging</h5>
+            <p>Founded in 2001, equipped with a 2000-ton free forging hydraulic press, 4-ton electro-hydraulic hammer, and ring rolling machines. Annual output: 30,000 tons. Main products include gear shafts, ladle trunnions, converter gear rings, and components for wind power and metallurgical industries.</p>
 
-        <h4>Machining</h4>
-        <p>Founded in 1989 with a 58,000 m² facility and 100-ton lifting capacity. Over 100 CNC machines. Largest CNC gantry milling and boring machine handles 5.5×16×4 m. Equipped with precision measuring systems such as μ-level CMMs and ultrasonic flaw detectors.</p>
+            <h5>Welding</h5>
+            <p>Established in 1992, covering 25,000 m² with a lifting capacity of up to 50 tons. Equipped with 4000W fiber laser cutters, flame cutting machines, arc welding robots, 1600T CNC press brakes, and straightening machines. Maximum product dimensions: 15,000×6,000×600 mm.</p>
 
-        <h4>Crushing Equipment</h4>
-        <p>Authorized distributor of Hanxi brand crushers and screening equipment. Our modular lines offer efficient installation and flexible configuration. Products are exported to over 50 countries.</p>
+            <h5>Machining</h5>
+            <p>Founded in 1989 with a 58,000 m² facility and 100-ton lifting capacity. Over 100 CNC machines. Largest CNC gantry milling and boring machine handles 5.5×16×4 m. Equipped with precision measuring systems such as μ-level CMMs and ultrasonic flaw detectors.</p>
 
-        <h4>Spare Parts</h4>
-        <p>We maintain a large warehouse of wear parts, copper parts, structural components, and standard hydraulic/electrical units to support fast delivery and one-stop procurement.</p>
-      </section>
+            <h5>Crushing Equipment</h5>
+            <p>Authorized distributor of Hanxi brand crushers and screening equipment. Our modular lines offer efficient installation and flexible configuration. Products are exported to over 50 countries.</p>
+
+            <h5>Spare Parts</h5>
+            <p>We maintain a large warehouse of wear parts, copper parts, structural components, and standard hydraulic/electrical units to support fast delivery and one-stop procurement.</p>
+          </div>
+        </div>
+
+      </div>
     </div>
-  </main>
+  </section>
 
-  <!-- Footer -->
+  <!-- 页脚 -->
   <footer class="site-footer section-padding">
     <div class="container text-center">
-      <p>&copy; 2025 CREATOR TECH. All Rights Reserved.</p>
+      <p class="text-white">&copy; 2025 CREATOR TECH. All Rights Reserved.</p>
     </div>
   </footer>
 
