--- a/index.html
+++ b/index.html
@@ -877,6 +877,17 @@ https://templatemo.com/tm-575-leadership-event
 
                 </div>
             </div>
+            <script>
+              const links = document.querySelectorAll(".nav-link");
+              links.forEach(link => {
+                  if (link.href === window.location.href) {
+                      link.classList.add("active");
+                  } else {
+                      link.classList.remove("active");
+                  }
+              });
+            </script>
+
         </footer>
 
         <!-- JAVASCRIPT FILES -->
