--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ https://templatemo.com/tm-575-leadership-event
 
                             <nav>
                                 <div class="nav nav-tabs align-items-baseline" id="nav-tab" role="tablist">
-                                    <button class="nav-link active" id="nav-DayOne-tab" data-bs-toggle="tab" data-bs-target="#nav-DayOne" type="button" role="tab" aria-controls="nav-DayOne" aria-selected="true">
+                                    <button class="nav-link " id="nav-DayOne-tab" data-bs-toggle="tab" data-bs-target="#nav-DayOne" type="button" role="tab" aria-controls="nav-DayOne" aria-selected="true">
                                         <h3>
                                             <span>Day One</span>
                                             <small>July 12, 2022</small>
