--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://templatemo.com/tm-575-leadership-event
                                 </div>
 
 
-                                <a href="#section_2" class="custom-link bi-arrow-down arrow-icon"></a>
+                                <a href="#factories" class="custom-link bi-arrow-down arrow-icon"></a>
                             </div>
                         </div>
                     </div>
@@ -886,7 +886,6 @@ https://templatemo.com/tm-575-leadership-event
         <script src="js/jquery.sticky.js"></script>
         <script src="js/click-scroll.js"></script>
         <script src="js/custom.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     </body>
 </html>
