--- a/factories.html
+++ b/factories.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Leadership Event HTML5 Bootstrap v5 Template</title>
+        <title>Creator Tech Factories</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -112,7 +112,7 @@ https://templatemo.com/tm-575-leadership-event
           <div class="col-lg-5 col-12 ms-lg-auto">
             <div class="copyright-text-wrap d-flex align-items-center">
               <p class="copyright-text ms-lg-auto me-4 mb-0">
-                Copyright © 2025 CREATOR TECH<br>Design: TemplateMo
+                Copyright © 2025 CREATOR TECH
               </p>
               <a href="#" class="bi-arrow-up arrow-icon custom-link"></a>
             </div>
