--- a/factories.html
+++ b/factories.html
@@ -103,10 +103,10 @@ https://templatemo.com/tm-575-leadership-event
           </div>
           <div class="col-lg-7 col-12">
             <ul class="footer-menu d-flex flex-wrap">
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Our Story</a></li>
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy</a></li>
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Terms</a></li>
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
+              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Home</a></li>
+              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Processes</a></li>
+              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
+              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-lg-5 col-12 ms-lg-auto">
