--- a/factories.html
+++ b/factories.html
@@ -67,20 +67,43 @@ https://templatemo.com/tm-575-leadership-event
 
     <!-- 主体内容 -->
     <main>
-      <section class="about-section section-padding">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-lg-7 col-12 mb-4 mb-lg-0">
-              <h2 class="text-black mb-3">About Our Capabilities</h2>
-              <p>Empowering industry with smart solutions in casting, forging, machining and more.</p>
-              <p>We specialize in technical support and one-stop trade services for industrial clients worldwide.</p>
-            </div>
-            <div class="col-lg-5 col-12">
-              <img src="images/factories-overview.png" class="img-fluid rounded shadow" alt="Factory Overview">
-            </div>
-          </div>
-        </div>
-      </section>
+      <section class="about-section section-padding" id="section_factories">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-12">
+        <h2 class="mb-4 text-center">Company Overview</h2>
+
+        <p><strong>I. Company Profile</strong><br>
+        Located in Shenyang, the industrial heart of Northeast Asia, Shenyang Chuanyuan Weihua Technology Co., Ltd. leverages the region’s abundant industrial resources and diverse industrial environment to provide comprehensive technical consulting, support, and one-stop trade solutions for the industrial sector. Upholding the values of integrity, rapid response, competitive pricing, and premium service, we are dedicated to supplying high-quality equipment and spare parts for industries such as metallurgy, mining, machine tools, automotive, compressors, blowers, turbines, and steel.</p>
+
+        <p>With an experienced professional team specializing in market development, efficient procurement, and supply chain management, we have built long-term, stable partnerships with leading enterprises at home and abroad. Our extensive supply chain network and end-to-end quality control and logistics support ensure clients receive the best possible service and products at the most competitive prices.</p>
+
+        <p>Guided by customer needs, we continuously optimize our supply chain system and service capabilities, aiming to become the most trusted partner of our clients. We look forward to cooperating with you to create a brighter future through professional and efficient solutions.</p>
+
+        <h3 class="mt-5">II. Manufacturing and Supply Capabilities</h3>
+
+        <p><strong>1. Cast Iron Components</strong><br>
+        Founded in 2002, the company operates two 3-ton melting furnaces and one 20-ton heat treatment furnace, with an annual casting capacity of 15,000 tons. We produce gray and ductile iron parts ranging from 5 kg to 8 tons. Equipped with tensile testers, front furnace analyzers, and spectrometers, we ensure consistent product quality. Applications include mining, marine, machine tools, photovoltaic, and semiconductor sectors.</p>
+
+        <p><strong>2. Forged Components</strong><br>
+        Established in 2001, we own a 2000-ton free forging press, 4-ton power hammers, a 650 ring rolling machine, manipulators, and heat treatment furnaces. With an annual output of 30,000 tons, our forged products include wind turbine gear shafts, ladle trunnions, converter gear rings, torsion bars, crane crossbeams, rolling mill gear shafts, and large pelletizer components.</p>
+
+        <p><strong>3. Welded Structures</strong><br>
+        Founded in 1992 and covering 25,000 m², our plant supports lifting capacities of up to 50 tons. We own a 4000W fiber laser cutter, flame cutting machines, arc welding robots, press brakes, a 1600T CNC hydraulic bender, and leveling equipment. We manufacture parts up to 15000×6000×600 mm in size and cut steel up to 450 mm thick, serving industries such as railways, coal, petroleum, power, papermaking, rolling, metallurgy, and rubber.</p>
+
+        <p><strong>4. Machining Capabilities</strong><br>
+        Founded in 1989 and spanning over 58,000 m², our facility supports 100-ton lifting capacity and houses more than 100 CNC machines. Our largest CNC gantry milling and boring machine handles up to 5.5×16×4 m, and our TK6920 floor-type boring-milling machine handles 4×12 m with an 80-ton CNC rotary table. We also own precision inspection tools, including μ-level CMMs, spectrometers, ultrasonic flaw detectors, and metallographic instruments.</p>
+
+        <p><strong>5. Crushing Equipment</strong><br>
+        We are an authorized distributor of Hanxi-brand crushers including gyratory, jaw, cone, impact, vertical shaft crushers, vibrating screens, and feeders. Our equipment serves metal/non-metal mines, aggregates, cement, construction, and waste recycling sectors. We also offer modular production lines known for fast setup and flexibility. Our direct-drive permanent magnet motor solutions save up to 25% in energy and represent a technical breakthrough. Our products are exported to over 50 countries and are preferred by top global mining and cement corporations.</p>
+
+        <p><strong>Spare Parts & Accessories</strong><br>
+        We operate a large warehouse stocked with a full range of wear parts, structural parts, copper parts, standard components, and hydraulic/electrical components. Our fast and efficient logistics system ensures quick delivery and supports clients with one-stop procurement and reliable supply security.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
     </main>
 
     <!-- 页脚 -->
