--- a/factories.html
+++ b/factories.html
@@ -33,7 +33,7 @@ https://templatemo.com/tm-575-leadership-event
 
   <body>
     <!-- 导航栏 -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a href="index.html" class="navbar-brand mx-auto mx-lg-0 d-flex align-items-center">
           <img src="images/LOGO2.png" alt="Company Logo" style="height: 40px; margin-right: 10px;">
