--- a/factories.html
+++ b/factories.html
@@ -73,7 +73,7 @@ https://templatemo.com/tm-575-leadership-event
       <div class="col-lg-12 col-12">
         <h2 class="mb-4 text-center">Company Overview</h2>
 
-        <p><strong>I. Company Profile</strong><br>
+        <p><h3 class="mt-5">I. Company Profile</h3>
         Located in Shenyang, the industrial heart of Northeast Asia, Shenyang Chuanyuan Weihua Technology Co., Ltd. leverages the region’s abundant industrial resources and diverse industrial environment to provide comprehensive technical consulting, support, and one-stop trade solutions for the industrial sector. Upholding the values of integrity, rapid response, competitive pricing, and premium service, we are dedicated to supplying high-quality equipment and spare parts for industries such as metallurgy, mining, machine tools, automotive, compressors, blowers, turbines, and steel.</p>
 
         <p>With an experienced professional team specializing in market development, efficient procurement, and supply chain management, we have built long-term, stable partnerships with leading enterprises at home and abroad. Our extensive supply chain network and end-to-end quality control and logistics support ensure clients receive the best possible service and products at the most competitive prices.</p>
