--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-6 col-12 d-flex flex-column justify-content-center align-items-center">
                             <div class="speakers-text-info">
-                                <h2 class="mb-4">Our <u class="text-info">Speakers</u></h2>
+                                <h2 class="mb-4">Our <u class="text-info">Main Businesses</u></h2>
 
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut dolore</p>
+                                <p>We specialize in machining, casting, welding, forging, and spare parts supply, delivering industrial solutions with precision and reliability</p>
                             </div>
                         </div>
 
@@ -203,13 +203,11 @@ https://templatemo.com/tm-575-leadership-event
                             <div class="speakers-thumb">
                                 <img src="images/avatar/happy-asian-man-standing-with-arms-crossed-grey-wall.jpg" class="img-fluid speakers-image" alt="">
 
-                                <small class="speakers-featured-text">Featured</small>
-
                                 <div class="speakers-info">
 
-                                    <h5 class="speakers-title mb-0">Logan Wilson</h5>
+                                    <h5 class="speakers-title mb-0">Machining</h5>
 
-                                    <p class="speakers-text mb-0">CEO / Founder</p>
+                                    <p class="speakers-text mb-0">Precision CNC & Heavy Equipment</p>
 
                                     <ul class="social-icon">
                                         <li><a href="#" class="social-icon-link bi-facebook"></a></li>
@@ -229,9 +227,9 @@ https://templatemo.com/tm-575-leadership-event
                                         <img src="images/avatar/portrait-good-looking-brunette-young-asian-woman.jpg" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
-                                            <h5 class="speakers-title mb-0">Natalie</h5>
+                                            <h5 class="speakers-title mb-0">Casting</h5>
 
-                                            <p class="speakers-text mb-0">Event Planner</p>
+                                            <p class="speakers-text mb-0">Gray & Ductile Iron Castings</p>
 
                                             <ul class="social-icon">
                                                 <li><a href="#" class="social-icon-link bi-facebook"></a></li>
@@ -247,9 +245,9 @@ https://templatemo.com/tm-575-leadership-event
                                         <img src="images/avatar/senior-man-white-sweater-eyeglasses.jpg" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
-                                            <h5 class="speakers-title mb-0">Thomas</h5>
+                                            <h5 class="speakers-title mb-0">Welding</h5>
 
-                                            <p class="speakers-text mb-0">Startup Coach</p>
+                                            <p class="speakers-text mb-0">High-Strength Fabrication</p>
 
                                             <ul class="social-icon">
                                                 <li><a href="#" class="social-icon-link bi-instagram"></a></li>
@@ -265,9 +263,9 @@ https://templatemo.com/tm-575-leadership-event
                                         <img src="images/avatar/pretty-smiling-joyfully-female-with-fair-hair-dressed-casually-looking-with-satisfaction.jpg" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
-                                            <h5 class="speakers-title mb-0">Isabella</h5>
+                                            <h5 class="speakers-title mb-0">Forging</h5>
 
-                                            <p class="speakers-text mb-0">Event Manager</p>
+                                            <p class="speakers-text mb-0">Open-die & Ring Forging</p>
 
                                             <ul class="social-icon">
                                                 <li><a href="#" class="social-icon-link bi-facebook"></a></li>
@@ -285,9 +283,9 @@ https://templatemo.com/tm-575-leadership-event
                                         <img src="images/avatar/indoor-shot-beautiful-happy-african-american-woman-smiling-cheerfully-keeping-her-arms-folded-relaxing-indoors-after-morning-lectures-university.jpg" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
-                                            <h5 class="speakers-title mb-0">Samantha</h5>
+                                            <h5 class="speakers-title mb-0">Spare Parts</h5>
 
-                                            <p class="speakers-text mb-0">Top Level Speaker</p>
+                                            <p class="speakers-text mb-0">Stocked Wear & Standard Parts</p>
 
                                             <ul class="social-icon">
                                                 <li><a href="#" class="social-icon-link bi-instagram"></a></li>
