--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-6 col-12 d-flex flex-column justify-content-center align-items-center">
                             <div class="speakers-text-info">
-                                <h2 class="mb-4">Our <u class="text-info">Main Businesses</u></h2>
+                                <h2 class="mb-4 text-center">
+                                  Our<br><u class="text-info">Main Businesses</u>
+                                </h2>
 
                                 <p>We specialize in machining, casting, welding, forging, and spare parts supply, delivering industrial solutions with precision and reliability</p>
                             </div>
