--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-6 col-12">
                             <div class="speakers-thumb">
-                                <img src="images/avatar/happy-asian-man-standing-with-arms-crossed-grey-wall.jpg" class="img-fluid speakers-image" alt="">
+                                <img src="images/avatar/machining.png" class="img-fluid speakers-image" alt="">
 
                                 <div class="speakers-info">
 
@@ -227,7 +227,7 @@ https://templatemo.com/tm-575-leadership-event
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 col-12">
                                     <div class="speakers-thumb speakers-thumb-small">
-                                        <img src="images/avatar/portrait-good-looking-brunette-young-asian-woman.jpg" class="img-fluid speakers-image" alt="">
+                                        <img src="images/avatar/casting.png" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
                                             <h5 class="speakers-title mb-0">Casting</h5>
@@ -246,7 +246,7 @@ https://templatemo.com/tm-575-leadership-event
 
                                 <div class="col-lg-3 col-md-6 col-12">
                                     <div class="speakers-thumb speakers-thumb-small">
-                                        <img src="images/avatar/senior-man-white-sweater-eyeglasses.jpg" class="img-fluid speakers-image" alt="">
+                                        <img src="images/avatar/welding.png" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
                                             <h5 class="speakers-title mb-0">Welding</h5>
@@ -265,7 +265,7 @@ https://templatemo.com/tm-575-leadership-event
 
                                 <div class="col-lg-3 col-md-6 col-12">
                                     <div class="speakers-thumb speakers-thumb-small">
-                                        <img src="images/avatar/pretty-smiling-joyfully-female-with-fair-hair-dressed-casually-looking-with-satisfaction.jpg" class="img-fluid speakers-image" alt="">
+                                        <img src="images/avatar/forging.png" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
                                             <h5 class="speakers-title mb-0">Forging</h5>
@@ -286,7 +286,7 @@ https://templatemo.com/tm-575-leadership-event
 
                                 <div class="col-lg-3 col-md-6 col-12">
                                     <div class="speakers-thumb speakers-thumb-small">
-                                        <img src="images/avatar/indoor-shot-beautiful-happy-african-american-woman-smiling-cheerfully-keeping-her-arms-folded-relaxing-indoors-after-morning-lectures-university.jpg" class="img-fluid speakers-image" alt="">
+                                        <img src="images/avatar/spare parts.png" class="img-fluid speakers-image" alt="">
 
                                         <div class="speakers-info">
                                             <h5 class="speakers-title mb-0">Spare Parts</h5>
