--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ https://templatemo.com/tm-575-leadership-event
                             <div class="highlight-thumb">
                                 <img src="images/highlight/casting.png" class="highlight-image img-fluid" alt="Casting">
                                 <div class="highlight-info">
-                                    <h3 class="highlight-title">Casting</h3>
+                                    <h3 class="highlight-title">Quality</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
                                 </div>
                             </div>
@@ -140,7 +140,7 @@ https://templatemo.com/tm-575-leadership-event
                             <div class="highlight-thumb">
                                 <img src="images/highlight/welding.png" class="highlight-image img-fluid" alt="Welding">
                                 <div class="highlight-info">
-                                    <h3 class="highlight-title">Welding</h3>
+                                    <h3 class="highlight-title">Efficiency</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@ https://templatemo.com/tm-575-leadership-event
                             <div class="highlight-thumb">
                                 <img src="images/highlight/machining.png" class="highlight-image img-fluid" alt="Machining">
                                 <div class="highlight-info">
-                                    <h3 class="highlight-title">Machining</h3>
+                                    <h3 class="highlight-title">Trust</h3>
                                     <a href="https://www.youtube.com/@Creator-cywh" class="bi-youtube highlight-icon" target="_blank"></a>
                                 </div>
                             </div>
